# karuahchess

./: .gitignore  PrivacyPolicy.html  README.md
forAndroid/: build.gradle  gradle.properties  settings.gradle
forAndroid/app/: build.gradle  google-services.json  proguard-rules.pro
forAndroid/gradle/wrapper/: gradle-wrapper.properties
forAndroid/karuahchessengine/: CMakeLists.txt  build.gradle  proguard-rules.pro
forAndroid/karuahchessengine/src/Main/cpp/: KaruahChessEngine-C1.cpp  sf_bitboard.cpp  sf_bitboard.h  sf_endgame.cpp  sf_evaluate.cpp  sf_evaluate.h  sf_material.h  sf_misc.cpp  sf_misc.h  sf_movegen.cpp  sf_movegen.h  sf_movepick.cpp  sf_movepick.h  sf_pawns.cpp  sf_position.cpp  sf_position.h  sf_psqt.cpp  sf_search.cpp  sf_thread.cpp  sf_thread.h  sf_tt.cpp  sf_tt.h  sf_types.h  sf_uci.cpp  sf_ucioption.cpp
forAndroid/karuahchessengine/src/Main/cpp/nnue/: nnue_accumulator.h  nnue_architecture.h  nnue_feature_transformer.h
forAndroid/karuahchessengine/src/Main/cpp/nnue/features/: half_ka_v2_hm.cpp  half_ka_v2_hm.h
forAndroid/karuahchessengine/src/Main/java/purpletreesoftware/karuahchess/engine/: KaruahChessEngine.kt  KaruahChessEngineC1.kt
forAndroid/karuahchessengine/src/main/: AndroidManifest.xml
forAndroid/karuahchessengine/src/main/cpp/: BitBoard.cpp  BitBoard.h  Engine.cpp  Engine.h  MoveRules.cpp  MoveRules.h  PiecePattern.cpp  PiecePattern.h  PieceStructure.cpp  PieceStructure.h  SFbitbase.cpp  SFbitboard.cpp  SFbitboard.h  SFendgame.cpp  SFendgame.h  SFevaluate.cpp  SFevaluate.h  SFmaterial.cpp  SFmaterial.h  SFmisc.cpp  SFmisc.h  SFmovegen.h  SFmovepick.cpp  SFmovepick.h  SFpawns.cpp  SFpawns.h  SFposition.cpp  SFposition.h  SFpsqt.cpp  SFpsqt.h  SFsearch.cpp  SFsearch.h  SFthread.cpp  SFthread.h  SFtimeman.h  SFtt.cpp  SFtt.h  SFuci.cpp  SFuci.h  SFucioption.cpp  (+7 more)
forAndroid/karuahchessengine/src/main/cpp/nnue/: nnue_misc.h
forAndroid/karuahchessengine/src/main/cpp/syzygy/: tbprobe.h
forAndroid/karuahchessengine/src/main/java/purpletreesoftware/karuahchess/engine/: KaruahChessEngineC.kt  MoveResult.kt  SearchOptions.kt  SearchResult.kt
forAndroid/karuahchessengine/src/main/res/values/: strings.xml
forApple/Shared/: karuahchess-Bridging-Header.h
forApple/Shared/Common/: AdaptiveStack.swift  BoardButtonStyle.swift  ColourARGB.swift  Constants.swift  Extensions.swift  PieceSelectButtonStyle.swift  Strength.swift
forApple/Shared/Compression/: CompressionC.h  CompressionC.mm
forApple/Shared/CustomControl/: ActivityIndicatorView.swift  AnimationCompletionObserverModifier.swift  BoardMessageAlertView.swift  CastlingRightsView.swift  CoordPanelView.swift  Device.swift  DirectionIndicatorView.swift  ExportFileDocument.swift  FloatingActionView.swift  HintActor.swift  LevelIndicatorView.swift  NavigatorView.swift  PawnPromotionView.swift  PieceEditSelectView.swift  PieceEditToolView.swift  SearchActor.swift  TileAnimationInstruction.swift  TileAnimationMoveFadeModifier.swift  TileAnimationMoveModifier.swift  TileAnimationPutModifier.swift  TileAnimationTakeModifier.swift  TileAnimationView.swift  TileFadeOutModifier.swift  TileFallEffect.swift  TileFrameBoardPreference.swift  TileFrameMainPreference.swift  TileFramePreference.swift  TilePanelView.swift  TileShakeEffect.swift  TileView.swift  ToastView.swift
forApple/Shared/Database/: ExportDB.swift  GameRecordParser.swift  ImportDB.swift  ImportPGNProcessor.swift  KaruahChessDB.swift
forApple/Shared/Media/: nn-37f18f62d772-Info.txt  nn-5af11540bbfe-Info.txt  nn-b1a57edbea57-Info.txt
forApple/Shared/Rules/: BoardAnimation.swift  Move.swift
forApple/Shared/ViewModel/: ActivityIndicatorViewModel.swift  BoardMessageAlertViewModel.swift  BoardSettingsViewModel.swift  BoardViewModel.swift  CastlingRightsViewModel.swift  DirectionIndicatorViewModel.swift  EngineSettingsViewModel.swift  HintSettingsViewModel.swift  HintViewModel.swift  MenuSettingsViewModel.swift  NavigatorViewModel.swift  (+9 more)
forApple/iOS/: AppDelegate.swift  ContentView.swift  Info.plist  SceneDelegate.swift
forApple/karuahchess.xcodeproj/: project.pbxproj
forApple/macOS/: AppDelegate.swift  ContentView.swift  Info.plist  KaruahChessApp.swift  MainWindowController.swift
forUWP/: KaruahChess.sln
forUWP/KaruahChess/: App.xaml  App.xaml.cs  KaruahChess.csproj  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
forUWP/KaruahChessEngine/: BitBoard.cpp  Engine.cpp  KaruahChessEngine.vcxproj  KaruahChessEngine.vcxproj.filters  KaruahChessEngineClass.cpp  KaruahChessEngineClass.h  KaruahChessEngineClass.idl  MoveRules.cpp  MoveRules.h  PiecePattern.cpp  PiecePattern.h  PieceStructure.cpp  PieceStructure.h  SFbitbase.cpp  SFbitboard.h  SFendgame.cpp  SFendgame.h  SFevaluate.cpp  SFevaluate.h  SFmaterial.cpp  SFmaterial.h  SFmisc.cpp  SFmisc.h  SFmovegen.cpp  SFmovepick.cpp  SFmovepick.h  SFpawns.cpp  SFpawns.h  SFposition.cpp  SFposition.h  SFpsqt.cpp  SFsearch.cpp  SFsearch.h  SFthread.cpp  SFtimeman.cpp  SFtimeman.h  SFtt.cpp  SFtypes.h  SFuci.cpp  SFuci.h  (+6 more)
forUWP/KaruahChessPackage/: KaruahChessPackage.wapproj
forWinUI/: KaruahChess.sln
forWinUI/KaruahChess/: App.xaml  App.xaml.cs  ErrorWindow.xaml  ErrorWindow.xaml.cs  KaruahChess.csproj  MainWindow.xaml  MainWindow.xaml.cs
forWinUI/KaruahChessEngine/: Engine.cpp  KaruahChessEngine.vcxproj  KaruahChessEngine.vcxproj.filters  KaruahChessEngineClass.cpp  KaruahChessEngineClass.h  KaruahChessEngineClass.idl  KaruahChessEngine_TemporaryKey.pfx  MoveRules.cpp  MoveRules.h  PiecePattern.cpp  PiecePattern.h  SFbitboard.cpp  SFbitboard.h  SFmaterial.h  SFmisc.cpp  SFmisc.h  SFmovegen.cpp  SFmovepick.cpp  SFmovepick.h  SFpawns.cpp  SFposition.cpp  SFpsqt.cpp  SFpsqt.h  SFsearch.cpp  SFthread.cpp  SFtimeman.cpp  SFtt.cpp  SFuci.h  bitboard.cpp  bitboard.h  engine.h  helper.cpp  helper.h  packages.config  pch.cpp  pch.h  search.cpp  search.h  sf_bitboard.cpp  sf_bitboard.h  (+36 more)
forWinUI/KaruahChessEngineProjection/: KaruahChessEngineProjection.csproj
forWinUI/KaruahChessPackage/: KaruahChessPackage.wapproj  Package.appxmanifest
(+657 files in other folders)
